--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -1,9 +1,15 @@
+$col-size: 71px;
+
+$default-color: #AAA;
 $yellow: #D9BE5D;
 $green: #9AC099;
 $red: #CE6163;
 $blue: #75AEBF;
+$orange: #D8905A;
 
 $text-light: #F5F5F5;
 $text-dark-1: #393939;
 $text-dark-2: #707070;
 $text-dark-3: #ACACAC;
+
+$hover-color: rgba(0, 0, 0, 0.1);
