--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -12,4 +12,6 @@ $text-dark-1: #393939;
 $text-dark-2: #707070;
 $text-dark-3: #ACACAC;
 
+$border-color: #E0E0E0;
+
 $hover-color: rgba(0, 0, 0, 0.1);
