--- a/client/src/components/Menu/style.scss
+++ b/client/src/components/Menu/style.scss
@@ -2,7 +2,7 @@
 
 .Menu {
   display: inline-block;
-  width: $col-size;
+  width: calc(0.9 * #{$col-size});
   height: 100%;
   vertical-align: top;
   background-color: $default-color;
@@ -40,7 +40,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      padding: 20px;
+      padding: 17px;
       color: $text-light;
     }
   }
