--- a/client/src/components/Avatar/style.scss
+++ b/client/src/components/Avatar/style.scss
@@ -1,36 +1,11 @@
 @import '../../variables.scss';
 
 .Avatar {
-  display: inline-block;
-  width: 100%;
-  padding-top: 100%;
-  line-height: 100%;
-  /* font-size: 23px; */
-  font-size: 50%;
+  display: flex;
+  align-items: center;
   border-radius: 50%;
   background-color: $default-color;
   text-align: center;
-
-  /* &.sm {
-    width: 54px;
-    height: 54px;
-    line-height: 54px;
-    font-size: 20px;
-  }
-
-  &.md {
-    width: 63px;
-    height: 63px;
-    line-height: 63px;
-    font-size: 23px;
-  }
-
-  &.lg {
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    font-size: 29px;
-  } */
 
   &.yellow {
     background-color: $yellow;
@@ -49,8 +24,31 @@
   }
 
   span {
-    height: 100%;
-    line-height: 100%;
+    width: 63px;
+    height: 63px;
+    line-height: 63px;
+    font-size: 23px;
     color: $text-light;
+
+    &.sm {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      font-size: 16px;
+    }
+  
+    &.md {
+      width: 63px;
+      height: 63px;
+      line-height: 63px;
+      font-size: 23px;
+    }
+  
+    &.lg {
+      width: 80px;
+      height: 80px;
+      line-height: 80px;
+      font-size: 29px;
+    }
   }
 }
