--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -7,12 +7,19 @@
 body {
   margin: 0;
   height: 100vh;
+  font-size: 12px;
   color: $text-dark-2;
 }
 
 h2 {
-  margin: 15px;
+  padding: 15px;
   font-size: 15px;
+  font-weight: bold;
+  color: $text-dark-1;
+}
+
+h4 {
+  font-size: 13px;
   font-weight: bold;
   color: $text-dark-1;
 }
@@ -23,7 +30,7 @@ h2 {
 
 .App {
   margin: 0 auto;
-  width: 852px;
+  width: $app-width;
   height: 100%;
   font-family: 'Helvetica Neue';
 }
