Minor app adjustments

--- a/client/src/components/ChatListItem/style.scss
+++ b/client/src/components/ChatListItem/style.scss
@@ -20,7 +20,7 @@
       padding: 2px;
     }
 
-    .message {
+    .text {
       width: 100%;
       overflow-x: hidden;
       text-overflow: ellipsis;
