--- a/client/src/components/NewMessage/style.scss
+++ b/client/src/components/NewMessage/style.scss
@@ -1,10 +1,51 @@
 @import '../../variables.scss';
 
+.typing {
+  padding-top: 15px;
+  padding-right: 25px;
+  padding-left: 25px;
+  text-align: right;
+  color: $text-dark-2;
+  font-style: italic;
+
+  @keyframes blink {
+    0% {
+      opacity: .2;
+    }
+  
+    20% {
+      opacity: 1;
+    }
+  
+    100% {
+      opacity: .2;
+    }
+  }
+  
+  span {
+    animation-name: blink;
+    animation-duration: 1.4s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+  }
+  
+  span:nth-child(2) {
+    animation-delay: .2s;
+  }
+  
+  span:nth-child(3) {
+    animation-delay: .4s;
+  }
+}
+
 .NewMessage {
   display: flex;
   align-items: flex-end;
   width: 100%;
-  padding: 25px;
+  padding-top: 15px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  padding-left: 25px;
 
   form {
     display: flex;
