--- a/client/src/components/NewFriend/style.scss
+++ b/client/src/components/NewFriend/style.scss
@@ -1,13 +1,19 @@
 @import '../../variables.scss';
 
+$padding: 15px;
+
 .NewFriend {
-  padding: 15px;
+  position: relative;
+  padding: $padding;
 
   input {
     margin-bottom: 0;
   }
 
   .results {
+    position: absolute;
+    width: calc(100% - 2 * #{$padding});
+    background-color: rgba(255, 255, 255, 1);
     border: 1px solid $border-color;
 
     .found-friend {
@@ -17,7 +23,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #eee;
+        background-color: rgba(238, 238, 238, 1);
       }
 
       .content {
@@ -26,6 +32,7 @@
         margin-left: 10px;
 
         .username {
+          margin-top: 5px;
           color: $text-dark-3;
         }
       }
