--- a/client/src/components/Menu/style.scss
+++ b/client/src/components/Menu/style.scss
@@ -1,10 +1,10 @@
 @import '../../variables.scss';
 
 .Menu {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   width: calc(0.8 * #{$col-size});
   height: 100%;
-  vertical-align: top;
   background-color: $default-color;
 
   &.yellow {
@@ -23,21 +23,17 @@
     background-color: $blue;
   }
 
-  .menu-item {
-    position: relative;
-    padding-top: 100%;
+  .space {
+    flex: 1;
+  }
 
+  .menu-item {
     &:hover {
       cursor: pointer;
       background-color: $hover-color;
     }
 
     svg {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       padding: 17px;
