--- a/client/src/components/Menu/style.scss
+++ b/client/src/components/Menu/style.scss
@@ -28,9 +28,27 @@
   }
 
   .menu-item {
+    transition: background-color 300ms;
+
+    &.active {
+      background-color: $active-color;
+    }
+
     &:hover {
       cursor: pointer;
       background-color: $hover-color;
+
+      &.active {
+        background-color: $active-color;
+
+        svg {
+          color: $text-light;
+        }
+      }
+      
+      svg {
+        color: #fff;
+      }
     }
 
     svg {
@@ -38,6 +56,7 @@
       height: 100%;
       padding: 17px;
       color: $text-light;
+      transition: color 500ms;
     }
   }
 }
