--- a/client/src/components/Tab/style.scss
+++ b/client/src/components/Tab/style.scss
@@ -1,6 +1,12 @@
 @import '../../variables.scss';
 
 .Tab {
+  display: flex;
+  flex-direction: column;
   width: calc(3.9 * #{$col-size});
-  height: 100%;
+  /* height: 100%; */
+
+  .content {
+    overflow-y: scroll;
+  }
 }
