--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -86,3 +86,35 @@ button {
   height: 100%;
   font-family: $font-family;
 }
+
+.bg-white {
+  background-color: #fff;
+}
+
+.bg-yellow {
+  background-color: $yellow;
+}
+
+.bg-green {
+  background-color: $green;
+}
+
+.bg-red {
+  background-color: $red;
+}
+
+.bg-blue {
+  background-color: $blue;
+}
+
+.bg-orange {
+  background-color: $orange;
+}
+
+.bg-wine {
+  background-color: $wine;
+}
+
+.bg-purple {
+  background-color: $purple;
+}
