--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -11,6 +11,9 @@ $green: #9AC099;
 $red: #CE6163;
 $blue: #75AEBF;
 $orange: #D8905A;
+$wine: #8B5D5E;
+$purple: #7E5D84;
+
 $danger: #D9534F;
 
 $app-green: #23B873;
