--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -22,6 +22,7 @@ $text-light: #F5F5F5;
 $text-dark-1: #393939;
 $text-dark-2: #707070;
 $text-dark-3: #ACACAC;
+$link-color: #4285F4;
 
 $border-color: #E0E0E0;
 
