--- a/client/src/components/Message/style.scss
+++ b/client/src/components/Message/style.scss
@@ -3,7 +3,10 @@
 .Message {
   display: flex;
   align-items: flex-end;
-  padding: 25px;
+  padding-top: 10px;
+  padding-right: 25px;
+  padding-bottom: 10px;
+  padding-left: 25px;
   width: 100%;
 
   &.left {
@@ -38,9 +41,13 @@
 
   .content {
     .text {
-      padding: 15px;
-      min-height: 40px;
-      line-height: 15px;
+      display: flex;
+      align-items: center;
+      padding-top: 10px;
+      padding-right: 15px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      // min-height: 40px;
       background-color: #fff;
       border-radius: 20px;
       box-shadow: 0 0 14px rgba(0, 0, 0, 0.16);
