--- a/client/src/components/Tab/style.scss
+++ b/client/src/components/Tab/style.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: calc(3.9 * #{$col-size});
 
-  .content {
+  & > .content {
     height: 100%;
     overflow-y: scroll;
   }
