--- a/client/src/components/Friend/style.scss
+++ b/client/src/components/Friend/style.scss
@@ -34,7 +34,7 @@
 
   button {
     font-weight: normal;
-    border: 2px solid #003663;
-    color: $text-dark-2;
+    background-color: #ddd;
+    color: $text-dark-1;
   }
 }
