--- a/client/src/components/FriendsSearch/style.scss
+++ b/client/src/components/FriendsSearch/style.scss
@@ -15,6 +15,7 @@ $padding: 15px;
     width: calc(100% - 2 * #{$padding});
     background-color: rgba(255, 255, 255, 1);
     border: 1px solid $border-color;
+    z-index: 1;
 
     .found-friend {
       display: flex;
@@ -31,7 +32,6 @@ $padding: 15px;
         margin-left: 10px;
 
         .username {
-          margin-top: 5px;
           color: $text-dark-3;
         }
       }
