Adjustments after new use of context property

--- a/client/src/components/ChatListItem/style.scss
+++ b/client/src/components/ChatListItem/style.scss
@@ -22,10 +22,10 @@
     white-space: nowrap;
 
     h5 {
-      display: flex;
+      margin-bottom: 0;
     }
 
-    h4, p {
+    h5, p {
       align-items: center;
       padding: 2px;
     }
