--- a/client/src/components/FriendRequests/style.scss
+++ b/client/src/components/FriendRequests/style.scss
@@ -24,15 +24,18 @@
     display: flex;
     align-items: center;
     margin-top: 15px;
+    overflow-x: hidden;
+    white-space: nowrap;
 
     .content {
       flex: 1;
       margin-right: 10px;
       margin-left: 10px;
+      overflow-x: hidden;
+      white-space: nowrap;
 
-      h5 {
-        overflow: hidden;
-        white-space: nowrap;
+      h5, .username {
+        overflow-x: hidden;
         text-overflow: ellipsis;
       }
 
