--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -2,7 +2,7 @@ $app-width: 996px;
 
 $col-size: calc(#{$app-width} / 12);
 
-$font-family: 'Helvetica Neue';
+$font-family: 'Helvetica Neue', sans-serif;
 $font-size: 13px;
 
 $default-color: #AAA;
