Button component that's being used in the app

--- a/client/src/components/FriendRequests/style.scss
+++ b/client/src/components/FriendRequests/style.scss
@@ -44,14 +44,11 @@
       }
     }
 
-    button {
+    .Button {
       font-weight: normal;
-      &.confirm {
-        background-color: $success;
-      }
+
       &.delete {
         margin-left: 5px;
-        background-color: #ddd;
         color: $text-dark-1;
       }
     }
