--- a/client/src/components/Login/style.scss
+++ b/client/src/components/Login/style.scss
@@ -1,9 +1,21 @@
 @import '../../variables.scss';
 
 .Login {
+  position: relative;
   margin: auto auto;
   padding: 15px;
   width: calc(3.9 * #{$col-size});
+
+  .account-created {
+    display: none;
+    position: absolute;
+    top: -10px;
+    color: $app-green;
+
+    &.display {
+      display: block;
+    }
+  }
 
   p {
     margin-top: 15px;
